docs/docs/archive/0.3/intro/overview.adoc
= What is Objectos?

Objectos is a suite of open-source Java libraries. It is currently under construction and
still does very little. In this third public release it provides:

* a set of utilities for objects whose type is from the `java.lang` package;
* a note sink API; and
* a special-purpose collections API.

In this document, we will present you some introductory information about the
Objectos suite of Java libraries. We hope it will encourage you to:

* adopt Objectos in your current Java project;
* consider using Objectos in your next Java project; or
* bookmark this project and return in the future.

== Open-source

Objectos is open-source software licensed under the https://www.apache.org/licenses/LICENSE-2.0[Apache License, version 2.0].

== Built from scratch

All of the Objectos' Java libraries are built from scratch.
While we believe it to be a positive thing, we understand if this fact
discourages you. The reasons why we think it is a positive thing are:

* we do not depend on a third-party for addressing vulnerabilities.
Objectos' libraries have zero third-party dependencies;
* greater control on thread creation, object instantiation and
performance.

== CPU and memory cost-concious

We do not claim to know how to write performant software.

With that said, we believe that applications should be able to run in appropriately
sized servers. US dollar or Euro based prices for cloud computing can
be costly to small and medium sized businesses in countries with a
currency like the Brazilian Real.

== Built for current JDKs

OpenJDK has been offering both memory and performance improvements with every release.
We should embrace those gains.

== Documentation is a first-class citizen

We do not claim to have good documentation.

With that said, we have learned that a project does not exist without proper
documentation. Therefore, we will work to the best of our abilities to:

* provide documentation for all of our publicly available libraries. This may include:
 ** tutorials
 ** topic guides
 ** how-to guides
 ** Javadocs
* keep the documentation up-to-date.

== We eat our own dog food

This documentation site is a static website created with Objectos AsciiDoc, Objectos CSS and Objectos HTML.
Please note that these libraries are not publicly released yet.
But you can find the source code in our
https://github.com/objectos/incubator[incubator git repository].
